// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`should insert 3 replies 1`] = `
[
  {
    "config": "pierre-ia.org",
    "content": "Qui es-tu ?",
    "conv_id": "id_1",
    "metadata": "{"topics":null,"evaluation":{"customer":{"score":null,"comment":null},"organization":{"score":null,"comment":null},"ai":{"score":null,"comment":null}},"tokens":{"prompt":null,"completion":null,"total":null}}",
    "role": "user",
    "timestamp": "2012-12-12T12:05:00Z",
  },
  {
    "config": "pierre-ia.org",
    "content": "Je suis Pierre !",
    "conv_id": "id_1",
    "metadata": "{"topics":null,"evaluation":{"customer":{"score":null,"comment":null},"organization":{"score":null,"comment":null},"ai":{"score":null,"comment":null}},"tokens":{"prompt":null,"completion":null,"total":null}}",
    "role": "assistant",
    "timestamp": "2012-12-12T12:10:00Z",
  },
  {
    "config": "pierre-ia.org",
    "content": "Bonjour",
    "conv_id": "id_2",
    "metadata": "{"topics":null,"evaluation":{"customer":{"score":null,"comment":null},"organization":{"score":null,"comment":null},"ai":{"score":null,"comment":null}},"tokens":{"prompt":null,"completion":null,"total":null}}",
    "role": "user",
    "timestamp": "2012-12-12T12:15:00Z",
  },
]
`;

exports[`should retrieve 2 conversations 1`] = `
[
  {
    "config": "pierre-ia.org",
    "content": "Qui es-tu ?",
    "conv_id": "id_1",
    "metadata": {
      "evaluation": {
        "ai": {
          "comment": null,
          "score": null,
        },
        "customer": {
          "comment": null,
          "score": null,
        },
        "organization": {
          "comment": null,
          "score": null,
        },
      },
      "tokens": {
        "completion": null,
        "prompt": null,
        "total": null,
      },
      "topics": null,
    },
    "role": "user",
    "timestamp": "2012-12-12T12:05:00Z",
  },
  {
    "config": "pierre-ia.org",
    "content": "Je suis Pierre !",
    "conv_id": "id_1",
    "metadata": {
      "evaluation": {
        "ai": {
          "comment": null,
          "score": null,
        },
        "customer": {
          "comment": null,
          "score": null,
        },
        "organization": {
          "comment": null,
          "score": null,
        },
      },
      "tokens": {
        "completion": null,
        "prompt": null,
        "total": null,
      },
      "topics": null,
    },
    "role": "assistant",
    "timestamp": "2012-12-12T12:10:00Z",
  },
]
`;

exports[`should retrieve 2 conversations 2`] = `
[
  {
    "config": "pierre-ia.org",
    "content": "Bonjour",
    "conv_id": "id_2",
    "metadata": {
      "evaluation": {
        "ai": {
          "comment": null,
          "score": null,
        },
        "customer": {
          "comment": null,
          "score": null,
        },
        "organization": {
          "comment": null,
          "score": null,
        },
      },
      "tokens": {
        "completion": null,
        "prompt": null,
        "total": null,
      },
      "topics": null,
    },
    "role": "user",
    "timestamp": "2012-12-12T12:15:00Z",
  },
]
`;

exports[`should score conversations 1`] = `
[
  {
    "config": "pierre-ia.org",
    "content": "Qui es-tu ?",
    "conv_id": "id_1",
    "metadata": {
      "evaluation": {
        "ai": {
          "comment": "ai comment",
          "score": 4,
        },
        "customer": {
          "comment": "customer comment",
          "score": 1,
        },
        "organization": {
          "comment": "organization comment",
          "score": 2,
        },
        "pierre": {
          "comment": "pierre comment",
          "score": 3,
        },
      },
      "tokens": {
        "completion": null,
        "prompt": null,
        "total": null,
      },
      "topics": null,
    },
    "role": "user",
    "timestamp": "2012-12-12T12:05:00Z",
  },
  {
    "config": "pierre-ia.org",
    "content": "Je suis Pierre !",
    "conv_id": "id_1",
    "metadata": {
      "evaluation": {
        "ai": {
          "comment": "ai comment",
          "score": 4,
        },
        "customer": {
          "comment": "customer comment",
          "score": 1,
        },
        "organization": {
          "comment": "organization comment",
          "score": 2,
        },
        "pierre": {
          "comment": "pierre comment",
          "score": 3,
        },
      },
      "tokens": {
        "completion": null,
        "prompt": null,
        "total": null,
      },
      "topics": null,
    },
    "role": "assistant",
    "timestamp": "2012-12-12T12:10:00Z",
  },
]
`;

exports[`should score conversations 2`] = `
[
  {
    "config": "pierre-ia.org",
    "content": "Bonjour",
    "conv_id": "id_2",
    "metadata": {
      "evaluation": {
        "ai": {
          "comment": "outstanding answer!",
          "score": 5,
        },
        "customer": {
          "comment": null,
          "score": null,
        },
        "organization": {
          "comment": null,
          "score": null,
        },
      },
      "tokens": {
        "completion": null,
        "prompt": null,
        "total": null,
      },
      "topics": null,
    },
    "role": "user",
    "timestamp": "2012-12-12T12:15:00Z",
  },
]
`;

exports[`should retrieve all conversations 1`] = `
[
  {
    "config": "pierre-ia.org",
    "content": "Bonjour",
    "conv_id": "id_2",
    "metadata": {
      "evaluation": {
        "ai": {
          "comment": "outstanding answer!",
          "score": 5,
        },
        "customer": {
          "comment": null,
          "score": null,
        },
        "organization": {
          "comment": null,
          "score": null,
        },
      },
      "tokens": {
        "completion": null,
        "prompt": null,
        "total": null,
      },
      "topics": null,
    },
    "role": "user",
    "timestamp": "2012-12-12T12:15:00Z",
  },
]
`;
